HSEARCH-4851 Set JDK 17 as a baseline